# config-python

./: CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
src/config/: __init__.py  factories.py  settings.py
src/omnixys_config/: __init__.py  factories.py  settings.py
tests/: test_import.py
