[project]
name = "omnixys-config"
dynamic = ["version"]
description = "Omnixys unified configuration package (pydantic-settings)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.14"
authors = [{ name = "Omnixys Team", email = "team@omnixys.com" }]
keywords = ["omnixys", "config", "configuration", "pydantic-settings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings==2.14.1",
    "pydantic==2.13.4",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/omnixys/omnixys"
Repository = "https://github.com/omnixys/omnixys"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/config/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/config"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "pytest>=9.1.0",
    "pytest-asyncio>=0.26.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN101", "ANN401", "S101",
    "T20", "FBT", "D", "INP001",
]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
